Added api endpoint to list item collections, integrated into UI, bunch of UI enhancements
